--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ With an eye for detail and a drive to keep learning, I aim to grow into a develo
 <section id="contact">
   <div class="contact container">
     <div>
-      <h1 class="section-title">contact<span>info</span></h1>
+      <h1 class="section-title">Contact<span>info</span></h1>
     </div>
     <div class="contact-items">
       <div class="contact-item">
@@ -161,6 +161,30 @@ With an eye for detail and a drive to keep learning, I aim to grow into a develo
 
     </div>
   </div>
+</section>
+
+<section class="footer">
+  <div class="footer container">
+    <div class="brand">
+      <h1><span>RAUS</span>HAN <span></span>BHAR<span>DWAJ</span></h1>
+    </div>
+    <h2>Web Developer</h2>
+    <div class="social-icon">
+    <div class="social-item">
+      <a href="#"><img src="./img/fb.png"></a>
+    </div>
+     <div class="social-item">
+      <a href="#"><img src="./img/instagram.png"></a>
+    </div>
+     <div class="social-item">
+      <a href="#"><img src="./img/github.png"></a>
+    </div>
+     <div class="social-item">
+      <a href="#"><img src="./img/linkedlogo.png"></a>
+    </div>
+  </div>
+  <p>Copyright © 2025</p>
+</div>
 </section>
 </body>
 </html>
