Implemented header navigation (Home, Capabilities, Projects, About) and linked social icons to respective social media profiles

--- a/index.html
+++ b/index.html
@@ -7,13 +7,39 @@
   <title>My portfolio website</title>
 </head>
 <body>
+     <section id="header">
+      <div class="header container">
+        <div class="nav-bar">
+          <div class="brand">
+            <a href="#">
+              <h1><span>Raushan</span>Bhardwaj</h1>
+            </a>
+          </div>
+          <div class="nav-list">
+            <div class="hamb">
+              <div class="bar"></div>
+            </div>
+            <ul>
+              <li><a href="#one" data-after="Home">Home</a></li>
+              <li><a href="#services" data-after="capabilities">capabilities</a></li>
+              <li><a href="#projects" data-after="Projects">Projects</a></li>
+              <li><a href="#about" data-after="About">About</a></li>
+              
+            </ul>
+          </div>
+        </div>
+      </div>
+     </section>
+
+
+
   <section id="one">
   <div class="container" style="height: 100vh;">
     <div>
       <h1>Namaste, My Name Is<span></span></h1>
       <h1>Raushan Bhardwaj, <span></span></h1>
       <h1>A Passionate Web Developer & Problem Solver.</h1>
-      <a href="#" class="cta">Hire Me</a>
+      <a href="https://forms.gle/5gw9kAuzG8bc1fF19" class="cta">Let's Collaborate</a>
     </div>
   </div>
 </section>
@@ -171,20 +197,22 @@ With an eye for detail and a drive to keep learning, I aim to grow into a develo
     <h2>Web Developer</h2>
     <div class="social-icon">
     <div class="social-item">
-      <a href="#"><img src="./img/fb.png"></a>
+      <a href="https://www.facebook.com/"><img src="./img/fb.png"></a>
     </div>
      <div class="social-item">
-      <a href="#"><img src="./img/instagram.png"></a>
+      <a href="https://www.instagram.com/eye.roshan.bhardwaj/?hl=en"><img src="./img/instagram.png"></a>
     </div>
      <div class="social-item">
-      <a href="#"><img src="./img/github.png"></a>
+      <a href="https://github.com/RaushanKumar25"><img src="./img/github.png"></a>
     </div>
      <div class="social-item">
-      <a href="#"><img src="./img/linkedlogo.png"></a>
+      <a href="https://www.linkedin.com/in/raushan-kumar-evaboot7/"><img src="./img/linkedlogo.png"></a>
     </div>
   </div>
   <p>Copyright © 2025</p>
 </div>
 </section>
+
+<script src="./app.js"></script>
 </body>
 </html>
