uncomment the media query section of about section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1>Namaste, My Name Is<span></span></h1>
       <h1>Raushan Bhardwaj, <span></span></h1>
       <h1>A Passionate Web Developer & Problem Solver.</h1>
-      <a href="https://forms.gle/5gw9kAuzG8bc1fF19" class="cta">Let's Collaborate</a>
+      <a href="https://forms.gle/pMd1Tvr9Dii5dYYN6" class="cta">Let's Collaborate</a>
     </div>
   </div>
 </section>
